--- a/starterOnly/styles.css
+++ b/starterOnly/styles.css
@@ -471,6 +471,10 @@ footer {
   .topnav img {
     width: 112px;
   }
+  .topnav a:hover {
+    background-color: unset;
+    border-radius: 15px;
+  }
   .topnav.responsive {
     position: relative;
     flex-direction: column;
@@ -482,7 +486,7 @@ footer {
   }
   .topnav.responsive a {
     float: none;
-    display: block;
+    display: flex;
     text-align: left;
   }
   .topnav a {
