--- a/starterOnly/styles.css
+++ b/starterOnly/styles.css
@@ -370,6 +370,31 @@ input[data-error]::after {
   font-weight: normal;
   font-size: 16px;
 }
+/* Validation modal */
+.validation {
+  display: none;
+  justify-content: center;
+}
+.validation-text {
+  position: absolute;
+  bottom: 50%;
+  left: 50%;
+  transform: translate(-50%);
+  text-align: center;
+}
+.validation-button {
+  position: absolute;
+  bottom: 5%;
+  font-size: 14px;
+  padding: 8px 64px;
+  border-radius: 7px;
+  background-color: #fe142f;
+  color: white;
+  border: none;
+  cursor: pointer;
+}
+
+
 .hero-section {
   min-height: 93vh;
   border-radius: 10px;
