--- a/starterOnly/styles.css
+++ b/starterOnly/styles.css
@@ -384,7 +384,7 @@ input[data-error]::after {
 }
 .validation-button {
   position: absolute;
-  bottom: 5%;
+  bottom: 5% !important;
   font-size: 14px;
   padding: 8px 64px;
   border-radius: 7px;
