Added error messages in html

--- a/starterOnly/styles.css
+++ b/starterOnly/styles.css
@@ -198,6 +198,10 @@ input[data-error]::after {
     font-size: 0.4em;
     color: red;
 } */
+.error {
+  display: none;
+}
+
 .checkbox-label,
 .checkbox2-label {
   position: relative;
