--- a/starterOnly/styles.css
+++ b/starterOnly/styles.css
@@ -78,7 +78,6 @@ main {
   padding-right: 2vw;
   margin: 1px 20px 15px;
   border-radius: 2rem;
-  text-align: justify;
 }
 
 .modal-btn {
@@ -199,7 +198,9 @@ input[data-error]::after {
     color: red;
 } */
 .error {
-  display: none;
+display: none;
+font-size: 10px;
+color: #e54858;
 }
 
 .checkbox-label,
