--- a/starterOnly/styles.css
+++ b/starterOnly/styles.css
@@ -174,34 +174,16 @@ input {
   font-size: 20px;
   height: 48px;
 }
-/* .formData[data-error]::after {
-  content: attr(data-error);
-  font-size: 0.4em;
-  color: #e54858;
-  display: block;
-  margin-top: 7px;
-  margin-bottom: 7px;
-  text-align: right;
-  line-height: 0.3;
-  opacity: 0;
-  transition: 0.3s;
-}
-.formData[data-error-visible='true']::after {
-  opacity: 1;
-}
-.formData[data-error-visible='true'] .text-control {
-  border: 2px solid #e54858;
-}
-
-input[data-error]::after {
-    content: attr(data-error);
-    font-size: 0.4em;
-    color: red;
-} */
 .error {
 display: none;
 font-size: 10px;
 color: #e54858;
+}
+.error-display {
+  border: 2px solid red;
+}
+.error-display ~ .error {
+  display: block !important;
 }
 
 .checkbox-label,
